# sistema-academico-auth

./: FIX_SOCIALAPP_ERROR.md  QUICK_OAUTH_SETUP.md  RBAC_FINAL.md  RBAC_IMPROVED.md  RBAC_SETUP.md  README.md  SETUP_GUIDE.md  SOCIAL_AUTH_SETUP.md  pyproject.toml
my_site/: settings.py  urls.py
sistema_academico/: adapters.py  admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
sistema_academico/management/commands/: add_google_oauth.py  check_oauth.py  debug_oauth.py  setup_demo_data.py  setup_rbac.py
sistema_academico/migrations/: 0001_initial.py  0002_career_faculty_course_career_faculty_profile_section_and_more.py  0003_move_role_to_profile.py  0004_remove_profile_type_use_role.py  0005_fix_limit_choices_to_constraints.py
sistema_academico/templates/sistema_academico/: backup_codes.html  base.html  dashboard.html  disable_2fa.html  enrollment_detail.html  enrollment_grade.html  enrollment_list.html  login.html  regenerate_backup_codes.html  setup_2fa.html  verify_2fa.html  view_backup_codes.html
sistema_academico/templatetags/: social_tags.py
